# Alibaba-CLI-Scraper

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Pipfile  README.md  cobertura.xml  engine_and_database.py  html_to_disk.py  main.py  models.py  models_blue_print.txt  pyproject.toml  requirements.txt  scrape_from_disk.py  scrapper.py  utils_scrapping.py  web_scrapper.py
.github/: FUNDING.yml
.github/workflows/: release_to_pypi.yml
Alibaba_Pages_results/: page_1.html  page_10.html  page_11.html  page_12.html  page_13.html  page_14.html  page_15.html  page_16.html  page_17.html  page_18.html  page_19.html  page_2.html  page_20.html  page_21.html  page_22.html  page_23.html  page_24.html  page_25.html  page_26.html  page_27.html  page_28.html  page_29.html  page_3.html  page_30.html  page_31.html  page_32.html  page_33.html  page_34.html  page_35.html  page_36.html  page_37.html  page_38.html  page_39.html  page_4.html  page_40.html  page_41.html  page_42.html  page_5.html  page_6.html  page_7.html  (+2 more)
aba_cli_scrapper/: .env  __init__.py  __main__.py  app.py  ascii.py  commands.py  engine_and_database.py  html_to_disk.py  info_message.py  models.py  proxies_providers.py  proxies_utils.py  scrape_from_disk.py  typed_datas.py  utils_scrapping.py  web_scrapper.py
ali2b-cli-scrapper/: app.py  engine_and_database.py  pays_data.json  utils_scrapping.py  web_scrapper.py
docs/: conf.py  index.md  requirements.txt
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: api.rst.txt  index.rst.txt
src/: app.py  engine_and_database.py  html_to_disk.py  info_message.py  main.py  models.py  scrape_from_disk.py  utils_scrapping.py  web_scrapper.py
tests/: __init__.py  facsv.csv  test_commands.py  test_db_update_process.py
tests/Air_fryers/: page_1.html  page_10.html  page_11.html  page_13.html  page_2.html  page_3.html
tests/electrics_bicycles/: page_1.html  page_10.html  page_11.html  page_12.html  page_13.html  page_14.html  page_15.html  page_16.html  page_17.html  page_18.html  page_19.html  page_2.html  page_20.html  page_21.html  page_22.html  page_23.html  page_24.html  page_25.html  page_26.html  page_27.html  page_28.html  page_29.html  page_3.html  page_30.html  page_31.html  page_32.html  page_33.html  page_34.html  page_35.html  page_36.html  page_37.html  page_38.html  page_4.html  page_5.html  page_6.html  page_7.html  page_8.html  page_9.html
tests/pc_lenovo/: page_1.html  page_1.json  page_2.html  page_2.json  page_3.html  page_3.json  page_4.html  page_4.json
tests/samsung_galaxy_s20/: page_1.html  page_10.html  page_11.html  page_12.html  page_13.html  page_14.html  page_15.html  page_16.html  page_17.html  page_18.html  page_19.html  page_2.html  page_20.html  page_21.html  page_22.html  page_23.html  page_24.html  page_25.html  page_26.html  page_27.html  page_28.html  page_29.html  page_3.html  page_30.html  page_31.html  page_32.html  page_33.html  page_34.html  page_35.html  page_36.html  page_37.html  page_38.html  page_39.html  page_4.html  page_40.html  page_41.html  page_42.html  page_43.html  page_44.html  page_45.html  (+55 more)
